<resources>
    <string name="app_name">Educational App</string>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">hFfaBT2TJqlfJM2HbNN9K8Dzg95UF1NPDGLlu2LP</string>

    <string name="back4app_client_key">HFxnDmQztijW92BwMF2g6fp97ut5LpES80Ei8VV6</string>
    <string name="edEmailAddressHint">Email/Username</string>
    <string name="LearnIt">Learn it</string>
    <string name="CreateAccount">New user? create account</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Email">Email Address</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="SignUp">Sign up</string>
    <string name="textview">TextView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>